<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octranspo_author"/>

    <TextView
        android:id="@+id/octranspo_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octranspo_credit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octranspo_app_version_num"/>

    <TextView
        android:id="@+id/octranspo_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/octranspo_instruction"/>

</LinearLayout>