<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item android:id="@+id/action_one_favourites"
        android:title="@string/icn_fav"
        android:icon="@drawable/icn_favmovie"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_two_home"
        android:title="@string/icn_home"
        android:icon="@drawable/icn_home_apple"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        />

    <item android:id="@+id/action_three_help"
        android:title="@string/icn_help"
        android:icon="@drawable/icn_movie_about"
        android:orderInCategory="103"
        app:showAsAction="ifRoom"
        />

</menu>